@@ -37,6 +37,7 @@ Version 1.4.8 - CVS
     sure the code only sets those variables that are needed in compose and
     are not already set. Thanks James Bercegay from GulfTech for pointing
     this out.
+  - Fixed subscription of new 'noselect' folders (#1315912).
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
